tests/expected_invalid_duplicate_phase_position.diag.out
<input>:9:9: error: duplicate phase position 'Draft'
            Draft,
            ^^^^^
